--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 diff = "0.1"
 itertools = "0.10.5"
 linked-hash-map = "0.5.6"
+fxhash = "0.2.1"
 grid = "0.10"
 rand = "^0.8"
 dmmtools = { git = "https://github.com/DreamySkrell/SpacemanDMM", rev = "a1e0cf98a303ba037ec9778b427690ebd566148c", package = "dmm-tools" }
